Fixing header to display pages in one line on smaller screen

--- a/watcher.css
+++ b/watcher.css
@@ -49,7 +49,7 @@ nav ul{
 }
 nav li{
     display: inline-block;
-    margin-left: 70px;
+    margin-left: 50px;
     padding-top: 22px;
 
     position: relative; /*For fancy hover*/
@@ -79,7 +79,7 @@ nav a:hover::before{
 }
 .logo{
     float: left;
-    padding: 10px 0;
+    padding: 8px 0;
     height: 60px;
     width: 60px;
 }
